--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
 
-      <h1><img src="https://godrizilla.github.io/public/images/logo-godrizilla.png" width="90%"></h1>
+      <h1><img src="https://godrizilla.github.io/public/images/logo-godrizilla.png" class="title-img" width="90%"></h1>
       <p class="lead">{{ site.description }}</p>
     </div>
 
