--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -320,7 +320,7 @@ tbody tr:nth-child(odd) th {
   margin-top: 0;
 }
 
-.page-title, .post-title{
+h1 .page-title{
   background: #C3FC40;
   padding: 3px;
 }
