--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -330,7 +330,9 @@ tbody tr:nth-child(odd) th {
   display: block;
   margin-top: -.5rem;
   margin-bottom: 1rem;
-  color: #9a9a9a;
+  color: #000;
+   background: #C3FC40;
+  padding: 3px;
 }
 
 /* Related posts */
