--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -327,17 +327,15 @@ tbody tr:nth-child(odd) th {
 
 /* Meta data line below post title */
 .post-date {
-  display: block;
+  display: inline;
   margin-top: -.5rem;
   margin-bottom: 1rem;
   color: #000;
 
-}
-
-.spn-post-date{
   background: #C3FC40;
   padding: 3px;
 }
+
 /* Related posts */
 .related {
   padding-top: 2rem;
