testando novas cores

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -323,12 +323,12 @@ tbody tr:nth-child(odd) th {
 .page-title, .post-title{
   background: #C3FC40;
   padding: 3px;
-  display: inline-block;
+  display: inline;
 }
 
 /* Meta data line below post title */
 .post-date {
-  display: inline;
+  display: block;
   margin-top: -.5rem;
   margin-bottom: 1rem;
   color: #000;
