testando novas cores

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -329,7 +329,7 @@ tbody tr:nth-child(odd) th {
 
 /* Meta data line below post title */
 .post-date {
-  display: block;
+  display: inherit;
   margin-top: -.5rem;
   margin-bottom: 1rem;
   color: #000;
