--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -304,7 +304,7 @@ tbody tr:nth-child(odd) th {
  * page is wrapped in `.page` and is only used on the page layout.
  */
 .page{
-  display: inline;
+  display: block;
 }
 .page,
 .post {
