--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -336,7 +336,7 @@ tbody tr:nth-child(odd) th {
   margin-bottom: 1rem;
   color: #000;
   font-weight: bold;
-  padding: 3px;
+  padding-top: 10px;
 }
 
 /* Related posts */
