--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,6 +10,15 @@
       <li class="sidebar-nav-item{% if page.title == "Home" %} active{% endif %}">
         <a href="/">Home</a>
       </li>
+       <li>
+         <small><a href="https://pt.stackoverflow.com/users/24168/godrix" target="_blank">Stackoverflow</a></small>
+      </li>
+      <li>
+         <small><a href="https://twitter.com/godrizilla" target="_blank">Twitter</a></small>
+      </li>
+       <li>
+         <small> <a href="/projects" >Projects</a></small>
+      </li>
       <li>
          <small> <a href="/projects" >Projects</a></small>
       </li>
