--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,14 +10,14 @@
       <li class="sidebar-nav-item{% if page.title == "Home" %} active{% endif %}">
         <a href="/">Home</a>
       </li>
-       <li>
+       <li class="li_stile">
          <small><a href="https://pt.stackoverflow.com/users/24168/godrix" target="_blank">Stackoverflow</a></small>
       </li>
       <li>
          <small><a href="https://twitter.com/godrizilla" target="_blank">Twitter</a></small>
       </li>
        <li>
-         <small> <a href="/projects" >Projects</a></small>
+         <small> <a href="https://www.instagram.com/godrizilla/" target="_blank" >Instagram</a></small>
       </li>
       <li>
          <small> <a href="/projects" >Projects</a></small>
