--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -217,3 +217,7 @@ a.sidebar-nav-item:focus {
 .theme-base-0f .related-posts li a:hover {
   color: #8f5536;
 }
+
+.li_stile{
+    background-color: #C3FC40;
+}
