--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -220,4 +220,7 @@ a.sidebar-nav-item:focus {
 
 .li_stile{
     background-color: #C3FC40;
+    color: black;
+    font-weight: bold;
+    width: auto;
 }
