--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,7 +20,7 @@
          <small> <a href="https://www.instagram.com/godrizilla/" target="_blank" >Instagram</a></small>
       </li>
       <li>
-         <small> <a href="/projects" >Projects</a></small>
+         <small class="li_stile"> <a href="/projects" >Projects</a></small>
       </li>
       <li class="li_stile">
           <small><a href="/about" >About</a></small>
