--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,20 +10,20 @@
       <li class="sidebar-nav-item{% if page.title == "Home" %} active{% endif %}">
         <a href="/">Home</a>
       </li>
-       <li class="li_stile">
-         <small><a href="https://pt.stackoverflow.com/users/24168/godrix" target="_blank">Stackoverflow</a></small>
+       <li>
+         <small class="li_stile"><a href="https://pt.stackoverflow.com/users/24168/godrix" target="_blank">Stackoverflow</a></small>
       </li>
-      <li class="li_stile">
-         <small><a href="https://twitter.com/godrizilla" target="_blank">Twitter</a></small>
+      <li>
+         <small class="li_stile"><a href="https://twitter.com/godrizilla" target="_blank">Twitter</a></small>
       </li>
-       <li class="li_stile">
-         <small> <a href="https://www.instagram.com/godrizilla/" target="_blank" >Instagram</a></small>
+       <li>
+         <small class="li_stile"> <a href="https://www.instagram.com/godrizilla/" target="_blank" >Instagram</a></small>
       </li>
       <li>
          <small class="li_stile"> <a href="/projects" >Projects</a></small>
       </li>
-      <li class="li_stile">
-          <small><a href="/about" >About</a></small>
+      <li>
+          <small class="li_stile"><a href="/about" >About</a></small>
       </li>
 
       {% comment %}
