--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,19 +11,19 @@
         <a href="/">Home</a>
       </li>
        <li>
-         <small class="li_stile"><a href="https://pt.stackoverflow.com/users/24168/godrix" target="_blank">Stackoverflow</a></small>
+         <small><a href="https://pt.stackoverflow.com/users/24168/godrix" target="_blank"  class="li_stile">Stackoverflow</a></small>
       </li>
       <li>
-         <small class="li_stile"> <a href="https://www.instagram.com/godrizilla/" target="_blank" >Instagram</a></small>
+         <small> <a href="https://www.instagram.com/godrizilla/" target="_blank"  class="li_stile" >Instagram</a></small>
       </li>
       <li>
-         <small class="li_stile"><a href="https://twitter.com/godrizilla" target="_blank">Twitter</a></small>
+         <small><a href="https://twitter.com/godrizilla" target="_blank"  class="li_stile">Twitter</a></small>
       </li>
       <li>
-         <small class="li_stile"> <a href="/projects" >Projects</a></small>
+         <small> <a href="https://github.com/godrix" class="li_stile" target="_blank" >GitHub</a></small>
       </li>
       <li>
-          <small class="li_stile"><a href="/about" >About</a></small>
+          <small><a href="/about" class="li_stile" >About</a></small>
       </li>
 
       {% comment %}
