--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,7 +11,7 @@
         <a href="/">Home</a>
       </li>
        <li>
-         <small><a href="https://pt.stackoverflow.com/users/24168/godrix" target="_blank"  class="li_stile">Stackoverflow</a></small>
+         <small><a href="https://pt.stackoverflow.com/users/24168/godrix" target="_blank"  class="li_stile"><font color="#000">Stackoverflow</font></a></small>
       </li>
       <li>
          <small> <a href="https://www.instagram.com/godrizilla/" target="_blank"  class="li_stile" >Instagram</a></small>
@@ -20,7 +20,7 @@
          <small><a href="https://twitter.com/godrizilla" target="_blank"  class="li_stile">Twitter</a></small>
       </li>
       <li>
-         <small> <a href="https://github.com/godrix" class="li_stile" target="_blank" >GitHub</a></small>
+         <small> <a href="https://github.com/godrix" class="li_stile" target="_blank" >Github</a></small>
       </li>
       <li>
           <small><a href="/about" class="li_stile" >About</a></small>
