--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,16 +14,16 @@
          <small><a href="https://pt.stackoverflow.com/users/24168/godrix" target="_blank"  class="li_stile"><font color="#000">Stackoverflow</font></a></small>
       </li>
       <li>
-         <small> <a href="https://www.instagram.com/godrizilla/" target="_blank"  class="li_stile" >Instagram</a></small>
+          <small> <a href="https://www.instagram.com/godrizilla/" target="_blank"  class="li_stile" ><font color="#000">Instagram</font></a></small>
       </li>
       <li>
-         <small><a href="https://twitter.com/godrizilla" target="_blank"  class="li_stile">Twitter</a></small>
+          <small><a href="https://twitter.com/godrizilla" target="_blank"  class="li_stile"><font color="#000">Twitter</font></a></small>
       </li>
       <li>
-         <small> <a href="https://github.com/godrix" class="li_stile" target="_blank" >Github</a></small>
+          <small> <a href="https://github.com/godrix" class="li_stile" target="_blank" ><font color="#000">Github</font></a></small>
       </li>
       <li>
-          <small><a href="/about" class="li_stile" >About</a></small>
+          <small><a href="/about" class="li_stile" ><font color="#000">About</font></a></small>
       </li>
 
       {% comment %}
